[package]
authors = ["pjmp"]
categories = ["command-line-utilities"]
description = """
Highly readable supplement to man pages.
Shows simple, concise examples for commands.
"""
edition = "2021"
homepage = "https://github.com/pjmp/bropages"
keywords = ["bro", "bropages", "tldr", "cheatsheet"]
license = "MIT"
name = "bropages"
readme = "README.md"
repository = "https://github.com/pjmp/bropages"
resolver = "2"
version = "1.3.1"

build = "build.rs"

[dependencies]
bat = {version = "0.21.0", default-features = false, features = ["paging", "regex-onig"]}
clap = {version = "3.2.17", default-features = false, features = ["std", "suggestions"]}
ureq = {version = "2.5.0", default-features = false, features = ["json"]}

[[bin]]
name = "bro"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
strip = true
