[package]
authors = ["pjmp"]
categories = ["command-line-utilities"]
description = """
Highly readable supplement to man pages.
Shows simple, concise examples for commands.
"""
edition = "2021"
homepage = "https://github.com/pombadev/bropages"
keywords = ["bro", "bropages", "tldr", "cheatsheet"]
license = "MIT"
name = "bropages"
readme = "README.md"
repository = "https://github.com/pombadev/bropages"
resolver = "2"
version = "1.41.0"

[dependencies]
bat = {version = "0.24.0", default-features = false, features = ["paging", "regex-fancy"]}
clap = {version = "4.5.4", default-features = false, features = [
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
]}
ureq = {version = "2.9.6", default-features = false, features = ["json"]}

[[bin]]
name = "bro"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
strip = true
